fixing like button and align center to phone

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -224,9 +224,10 @@ header{
 }
 
 .body-restaurant-card {
-    padding-left: 5%;
+    padding: 0 5% 0 5%;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 .like-card-icon
 {
@@ -339,9 +340,6 @@ ul {
     }
 /* Restaurant cards */
     .restaurant-card-box {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
         width: 100%;
         padding: 0;
         
